# Kaelum

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  STATUS.md  TODO.md
.github/workflows/: codeql.yml
include/: common.hpp  expected.hpp  glyph_engine.hpp  logger.hpp  loom.hpp  nexus.hpp  renderer.hpp  sigil.hpp  subprocess.hpp  surface.hpp  terminal.hpp  termio.hpp
shaders/: glyph.frag  glyph.frag.spv  glyph.vert  test.frag  test.frag.spv  test.vert  test.vert.spv
src/: glyph_engine.cpp  loom.cpp  main.cpp  nexus.cpp  renderer.cpp  sigil.cpp  subprocess.cpp  surface.cpp  terminal.cpp  termio.cpp  xdg-shell-client-protocol.cpp
